--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -121,7 +121,7 @@
       "stakeholder": "Chad Lavachek, Retail Marketing Manage",
       "path": "toms",
       "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13866%26campaignId%3D5688",
-      "problem": "Everyone knows TOMS for the 1 for 1 business model, but in 2017 that was like the smallest part of their giving program.",
+      "problem": "Everyone knows TOMS for the one for one business model, but in 2017 that was like the smallest part of their giving program.",
       "plan": "Create a web experience that educated people about the many other ways that TOMS gives back."
     },
     {
