--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -15,7 +15,8 @@
       "problem": "The sales department of ExpertVoice had difficulty picking the most up-to-date or relevant content to show prospective brand partners.",
       "plan": "Essentially, remove the communication barrier between Sales and Creative. Create a website that would act like a script for the content creation sales pitch, complete with links to the most up-to-date content. Updated by the creative team, quartly, used by the sales team daily.",
       "path": "EVstudios",
-      "url": "https://www.expertvoice.com/studios/"
+      "url": "https://www.expertvoice.com/studios/",
+      "process" : "We started by surveying the sales department, asking questions about how we could better support them in selling more custom web content. We found that they had been showing some very out of date work from our in-house-agency and immediately started work on a site to pitch custom content, and house all our best work. The design process was iterative, more so than I would have liked, we had a lot of stakeholders for something that was just supposed to be an internal tool, but after 3 rounds of feedback working from a medium-fidelity adobe XD mockup, I started building the site. After it was all built, we threw it over to them and watched as they navigated... we simplified things, and pressed the publish button. It's one of the most used sites on the whole signed-out side of the business, now!"
     },
     {
       "id": 2,
@@ -42,6 +43,26 @@
     },
     {
       "id": 3,
+      "name": "Descente",
+      "type": "Agency Work",
+      "buildtime": "36 hours",
+      "goal": "Brand awareness, product seeding",
+      "length": "",
+      "writer": "Seth Merrill",
+      "description": "Descente's been in the business of crafting premium ski apparel for 80 years, and it's reflected in the brand's thoughtful design process. ",
+      "logo": "assets/clients/descente/descente-logo.png",
+      "header": "assets/clients/descente/descente-tile.jpg",
+      "preview": "assets/clients/descente/descente-preview.jpg",
+      "budget": "",
+      "scope": "",
+      "stakeholder": "Patrick Purcell, Marketing Manager – USA",
+      "path": "descente",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14540%26campaignId%3D5688",
+      "problem": "Descente is a frech brand, currently operated out of Japan, where it has a massive following. You probably haven't heard of them though.",
+      "plan": "Design a website that educates people on the over-the-top quality and thoughtful design elements that are found in Descente outerwear."
+    },
+    {
+      "id": 4,
       "name": "Teva",
       "goal": "Brand awareness, product seeding",
       "type": "Agency Work",
@@ -62,7 +83,27 @@
       "plan": "Create a custom web experience celebrating Teva's canyon heritage and exploring the styles inspired by their unique roots."
     },
     {
-      "id": 4,
+      "id": 5,
+      "name": "Voke",
+      "goal": "Brand awareness, product seeding",
+      "type": "Agency Work",
+      "length": "20",
+      "buildtime": "15 hours",
+      "writer": "Tiffany Caldwell",
+      "description": "Voke makes an energy tablet with non-sugar ingredients. In my experience one tab gives you an almost immediate 3 hours of energy and focus. The content my team created for them helped improve retail sell-through and consumer product education.",
+      "logo": "assets/clients/voke/voke-logo.png",
+      "header": "assets/clients/voke/voke-header.jpg",
+      "preview": "assets/clients/voke/voke-preview-image.jpg",
+      "budget": "13,000",
+      "scope": "1 module",
+      "stakeholder": "XXX",
+      "path": "voke",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15536%26campaignId%3D5688",
+      "problem": "Voke was having a hard time selling their energy product in naturals retailers like GNC and educating their affiliates on the benefits / use-cases of their product.",
+      "plan": "Take a Voke tab, then code up a website that explains how beneficial these natural ingredients can be, when taken in concert with one another."
+    },
+    {
+      "id": 6,
       "name": "Nightforce",
       "audience": "xxx",
       "type": "Agency Work",
@@ -85,27 +126,7 @@
       "plan": "Just look at the site and please don't judge me for having guns on my portfolio. #pewpew"
     },
     {
-      "id": 5,
-      "name": "Descente",
-      "type": "Agency Work",
-      "buildtime": "36 hours",
-      "goal": "Brand awareness, product seeding",
-      "length": "",
-      "writer": "Seth Merrill",
-      "description": "Descente's been in the business of crafting premium ski apparel for 80 years, and it's reflected in the brand's thoughtful design process. ",
-      "logo": "assets/clients/descente/descente-logo.png",
-      "header": "assets/clients/descente/descente-tile.jpg",
-      "preview": "assets/clients/descente/descente-preview.jpg",
-      "budget": "",
-      "scope": "",
-      "stakeholder": "Patrick Purcell, Marketing Manager – USA",
-      "path": "descente",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D14540%26campaignId%3D5688",
-      "problem": "Descente is a frech brand, currently operated out of Japan, where it has a massive following. You probably haven't heard of them though.",
-      "plan": "Design a website that educates people on the over-the-top quality and thoughtful design elements that are found in Descente outerwear."
-    },
-    {
-      "id": 6,
+      "id": 7,
       "name": "TOMS",
       "goal": "Brand awareness, product seeding",
       "buildtime": "36 hours",
@@ -123,26 +144,6 @@
       "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13866%26campaignId%3D5688",
       "problem": "Everyone knows TOMS for the one for one business model, but in 2017 that was like the smallest part of their giving program.",
       "plan": "Create a web experience that educated people about the many other ways that TOMS gives back."
-    },
-    {
-      "id": 7,
-      "name": "Voke",
-      "goal": "Brand awareness, product seeding",
-      "type": "Agency Work",
-      "length": "20",
-      "buildtime": "15 hours",
-      "writer": "Tiffany Caldwell",
-      "description": "Voke makes an energy tablet with non-sugar ingredients. In my experience one tab gives you an almost immediate 3 hours of energy and focus. The content my team created for them helped improve retail sell-through and consumer product education.",
-      "logo": "assets/clients/voke/voke-logo.png",
-      "header": "assets/clients/voke/voke-header.jpg",
-      "preview": "assets/clients/voke/voke-preview-image.jpg",
-      "budget": "13,000",
-      "scope": "1 module",
-      "stakeholder": "XXX",
-      "path": "voke",
-      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15536%26campaignId%3D5688",
-      "problem": "Voke was having a hard time selling their energy product in naturals retailers like GNC and educating their affiliates on the benefits / use-cases of their product.",
-      "plan": "Take a Voke tab, then code up a website that explains how beneficial these natural ingredients can be, when taken in concert with one another."
     },
     {
       "id": 8,
