--- a/src/assets/projects-data.json
+++ b/src/assets/projects-data.json
@@ -1,26 +1,8 @@
 {
-  "data": [{
-      "id": 1,
-      "name": "ExpertVoice Studios",
-      "type": "Marketing Site",
-      "length": "",
-      "buildtime": "6 hours",
-      "description": "This is a site I put together, meant to house all the great work that our agency created. I faught a terribly annoying wordpress plugin, and accomplished like 80% of my goal for usability and interface design.",
-      "responsibilities": "xx",
-      "logo": "assets/clients/expertvoice/ev-logo.png",
-      "header": "assets/clients/expertvoice/ev-tile.jpg",
-      "preview": "assets/clients/expertvoice/ev-preview.jpg",
-      "budget": "",
-      "scope": "",
-      "problem": "The sales department of ExpertVoice had difficulty picking the most up-to-date or relevant content to show prospective brand partners.",
-      "plan": "Essentially, remove the communication barrier between Sales and Creative. Create a website that would act like a script for the content creation sales pitch, complete with links to the most up-to-date content. Updated by the creative team, quartly, used by the sales team daily.",
-      "path": "EVstudios",
-      "url": "https://www.expertvoice.com/studios/",
-      "process" : "We started by surveying the sales department, asking questions about how we could better support them in selling more custom web content. We found that they had been showing some very out of date work from our in-house-agency and immediately started work on a site to pitch custom content, and house all our best work. The design process was iterative, more so than I would have liked, we had a lot of stakeholders for something that was just supposed to be an internal tool, but after 3 rounds of feedback working from a medium-fidelity adobe XD mockup, I started building the site. After it was all built, we threw it over to them and watched as they navigated... we simplified things, and pressed the publish button. It's one of the most used sites on the whole signed-out side of the business, now!"
-    },
+  "data": [
 
     {
-      "id": 10,
+      "id": 1,
       "name": "ExpertVoice",
       "type": "UI development",
       "description": "The signed-out home page of ExpertVoice.com. This project was passed from marketer to contractor to ux researcher back to the marketer who finally asked me for help. What they had was a bunch of copy that had been tested for comprehension and a half-baked design that wasnt all that compelling. ",
@@ -33,9 +15,28 @@
       "plan": "Iterate on their idea, making it easier to parse through, and less bland, while still operating within the brand's color scheme and design language/library.",
       "process": "This project came across my desk already having gone through extensive internal review and the content (copy) had been thouroughly user tested for comprehension and usability. So by the thime I got my hands on it, there was less freedom than ever. But I feel like I was still able to vastly improve the final product by tweaking the layout and adding some polish to the visuals.  Not to mention increasing the font size. Everyone always sleeps on font-size. It's important."
     },
+    {
+        "id": 2,
+        "name": "ExpertVoice Studios",
+        "type": "Marketing Site",
+        "length": "",
+        "buildtime": "6 hours",
+        "description": "This is a site I put together, meant to house all the great work that our agency created. I faught a terribly annoying wordpress plugin, and accomplished like 80% of my goal for usability and interface design.",
+        "responsibilities": "xx",
+        "logo": "assets/clients/expertvoice/ev-logo.png",
+        "header": "assets/clients/expertvoice/ev-tile.jpg",
+        "preview": "assets/clients/expertvoice/ev-preview.jpg",
+        "budget": "",
+        "scope": "",
+        "problem": "The sales department of ExpertVoice had difficulty picking the most up-to-date or relevant content to show prospective brand partners.",
+        "plan": "Essentially, remove the communication barrier between Sales and Creative. Create a website that would act like a script for the content creation sales pitch, complete with links to the most up-to-date content. Updated by the creative team, quartly, used by the sales team daily.",
+        "path": "EVstudios",
+        "url": "https://www.expertvoice.com/studios/",
+        "process" : "We started by surveying the sales department, asking questions about how we could better support them in selling more custom web content. We found that they had been showing some very out of date work from our in-house-agency and immediately started work on a site to pitch custom content, and house all our best work. The design process was iterative, more so than I would have liked, we had a lot of stakeholders for something that was just supposed to be an internal tool, but after 3 rounds of feedback working from a medium-fidelity adobe XD mockup, I started building the site. After it was all built, we threw it over to them and watched as they navigated... we simplified things, and pressed the publish button. It's one of the most used sites on the whole signed-out side of the business, now!"
+      },
 
     {
-      "id": 2,
+      "id": 3,
       "name": "Lenovo",
       "audience": "~1.5 million",
       "goal": "Product education",
@@ -58,7 +59,7 @@
       "plan": "Really, just put something up to fill the space, and drive traffic. I'm passionate about computers and lenovo in particular though. So I went all out."
     },
     {
-      "id": 3,
+      "id": 4,
       "name": "Descente",
       "type": "Agency Work",
       "buildtime": "36 hours",
@@ -78,7 +79,7 @@
       "plan": "Design a website that educates people on the over-the-top quality and thoughtful design elements that are found in Descente outerwear."
     },
     {
-      "id": 4,
+      "id": 5,
       "name": "Teva",
       "goal": "Brand awareness, product seeding",
       "type": "Agency Work",
@@ -99,7 +100,7 @@
       "plan": "Create a custom web experience celebrating Teva's canyon heritage and exploring the styles inspired by their unique roots."
     },
     {
-      "id": 5,
+      "id": 6,
       "name": "Voke",
       "goal": "Brand awareness, product seeding",
       "type": "Agency Work",
@@ -119,7 +120,7 @@
       "plan": "Take a Voke tab, then code up a website that explains how beneficial these natural ingredients can be, when taken in concert with one another."
     },
     {
-      "id": 6,
+      "id": 7,
       "name": "Nightforce",
       "audience": "xxx",
       "type": "Agency Work",
@@ -142,7 +143,7 @@
       "plan": "Just look at the site and please don't judge me for having guns on my portfolio. #pewpew"
     },
     {
-      "id": 7,
+      "id": 8,
       "name": "TOMS",
       "goal": "Brand awareness, product seeding",
       "buildtime": "36 hours",
@@ -162,7 +163,7 @@
       "plan": "Create a web experience that educated people about the many other ways that TOMS gives back."
     },
     {
-      "id": 8,
+      "id": 9,
       "name": "Green Pan",
       "type": "Agency Work",
       "length": "6",
@@ -182,10 +183,10 @@
       "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D13275%26campaignId%3D5688"
     },
     {
-      "id": 9,
+      "id": 10,
       "name": "Hill's Pet Nutrition",
       "goal": "Category education",
-      "type": "Agency Work",
+      "type": "Product Education",
       "length": "65",
       "writer": "Alex Nygaard",
       "description": "Hill's started as a three minute, one-product module and grew into one of ExpertVoice's most valued brand partnerships. They reportedly LOVE the content we created for them. We made standard content, micro content, video content, live video content, published surveys, and redesigned the E-Commerce experience for their unique content incentives.",
@@ -194,12 +195,13 @@
       "preview": "assets/clients/hills/hills-preview-image.jpg",
       "budget": "609,148",
       "scope": "35 modules",
+      "process" : "Hill's approached our agency wanting to improve their retail rep training program. They had worked with us before, but were never fully engaged. They asked us to present our plan for engaging, training, and credentialing these reps working inside pet specialty stores, and we said: HMB. Alex Nygaard and I worked to craft a series of scaffolded content experiences that would educate these people in an engaging way, and at the end of what was to be multiple hours of training, they would get a certificate, and some gift cards. Fast forward 2 years – thousands of people have taken these courses, and have waded through what legal turned in to a slightly less engaging somewhat repetitive content experience.",
       "stakeholder": "Christina Savignano, Education Team Leader",
       "video": "assets/clients/hills/hills-recording.mp4",
       "path": "hills",
-      "problem": "Every &rduo;pet parent&lduo; has a different food related, Hill's neeed to cut through the BS about trendy diets, certify and credential their retail sales staff, and educate them about a massive wave of new and re-designed products.",
-      "plan": "We created a long series of engaging web experiences. Intentionally designed to be difficult. It is a credentialling process, and it is in-depth.",
-      "url": "FPO"
+      "problem": "Every 'pet parent'; has a different food related, Hill's neeed to cut through the BS about trendy diets, certify and credential their retail sales staff, and educate them about a massive wave of new and re-designed products.",
+      "plan": "We created a long series of engaging web experiences. They were intentionally designed to be difficult so as to credential the retail employee. To this day Hill's is the higest $ amount of content purchased, and the longest-format content available on the ExpertVoice platform, and I helped design, pitch, and create all of it.",
+      "url": "https://www.experticity.com/sign-in?identifier=salesdemo&password=access&signInRedirect=%2Flearn%2Fpreview%3FmoduleId%3D15019%26campaignId%3D6261"
     },
 
     {
